Fix overflow input file bug in mobile IE, other changes

--- a/themes/pic/css/bootstrap.css
+++ b/themes/pic/css/bootstrap.css
@@ -271,6 +271,9 @@ progress {
   font: inherit;
   -webkit-appearance: button; }
 
+input[type="file"] {
+  max-width: 100%; }
+
 output {
   display: inline-block; }
 
