--- a/themes/pic/scss/bootstrap/_reboot.scss
+++ b/themes/pic/scss/bootstrap/_reboot.scss
@@ -471,6 +471,13 @@ progress {
 }
 
 //
+// Fix overflow input file in IE
+//
+input[type="file"] {
+  max-width: 100%;
+}
+
+//
 // Correct element displays
 //
 
